--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
